# cp2026-minizinc-lean

./: .gitignore  .gitmodules  LICENSE  README.md  requirements.txt
lean/: lake-manifest.json  lakefile.lean
lean_translation_tests/: readme.md
lean_translation_tests/source_files/: arithmetic_bool1.mzn  arithmetic_bool2.mzn  arithmetic_ifthenelse.mzn  arithmetic_ifthenelse_elseif.mzn  arithmetic_int.mzn  arrays_collapsed_literals_and_views.mzn  constraint_all_different.mzn  constraint_array2d_bool_aggregators.mzn  constraint_array2d_min_max_plain.mzn  constraint_arrays_min_max.mzn  constraint_arrays_quantifiers.mzn  constraint_arrays_sum.mzn  constraint_bool2int.mzn  constraint_bool_comparisons.mzn  constraint_bool_set_literal.mzn  constraint_circuit.mzn  constraint_comprehension_multi_max.2.dzn  constraint_comprehension_multi_max.3.dzn  constraint_cumulative.1.dzn  constraint_cumulative.2.dzn  constraint_cumulative.3.dzn  constraint_cumulative.mzn  (+24 more)
mzn-to-lean/: CMakeLists.txt
mzn-to-lean/src/: compiler.hpp  compiler_state.hpp  config.hpp  expression_parser.hpp  library_functions.hpp  main.cpp  mz_term_aggregators.hpp  mz_term_arrays.hpp  mz_term_base.hpp  mz_term_functions.hpp  mz_term_fwd.hpp  mz_term_literals.hpp  mz_term_misc.hpp  mz_term_operators.hpp  mz_terms_all.hpp  mz_type.hpp  utils.hpp
python/: helpers_llm_config.py  helpers_logging.py  helpers_slurm.py  improver_llm.py  improver_main.py  improver_review_main.py  minizinc_benchmark.py  minizinc_benchmark_main.py  mzn_compiler.py  verifier_lean.py  verifier_llm.py  verifier_main_benchmarks.py
(+1280 files in other folders)
